--- a/belis-app/DokumenteVC.xib
+++ b/belis-app/DokumenteVC.xib
@@ -6,23 +6,44 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DokumenteVC" customModule="belis_app" customModuleProvider="target">
             <connections>
+                <outlet property="documentTV" destination="IVQ-D0-Miq" id="e7k-FE-XjJ"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="271" height="443"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="4Bj-BN-UmZ">
-                    <rect key="frame" x="37" y="76" width="123" height="29"/>
-                    <segments>
-                        <segment title="First"/>
-                        <segment title="Second"/>
-                    </segments>
-                </segmentedControl>
+                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YVm-ft-RoH">
+                    <rect key="frame" x="0.0" y="0.0" width="271" height="44"/>
+                    <items>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="R2L-7E-JxT"/>
+                        <barButtonItem systemItem="action" id="67o-tz-vZl"/>
+                    </items>
+                </toolbar>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="IVQ-D0-Miq">
+                    <rect key="frame" x="0.0" y="44" width="271" height="399"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="Kfg-YA-UKt"/>
+                        <outlet property="delegate" destination="-1" id="VB0-0d-pBB"/>
+                    </connections>
+                </tableView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="YVm-ft-RoH" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="32p-kI-7KN"/>
+                <constraint firstItem="IVQ-D0-Miq" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="5iw-c9-uHT"/>
+                <constraint firstAttribute="trailing" secondItem="IVQ-D0-Miq" secondAttribute="trailing" id="Xqx-3v-fiU"/>
+                <constraint firstAttribute="bottom" secondItem="IVQ-D0-Miq" secondAttribute="bottom" id="hj2-Zd-ghc"/>
+                <constraint firstAttribute="trailing" secondItem="YVm-ft-RoH" secondAttribute="trailing" id="p7q-zH-9H2"/>
+                <constraint firstItem="IVQ-D0-Miq" firstAttribute="top" secondItem="YVm-ft-RoH" secondAttribute="bottom" id="qK0-n0-TzQ"/>
+                <constraint firstItem="YVm-ft-RoH" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="uBT-YV-OGX"/>
+            </constraints>
+            <nil key="simulatedTopBarMetrics"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="-114.5" y="70.5"/>
         </view>
     </objects>
 </document>
