--- a/belis-app/Main.storyboard
+++ b/belis-app/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Kou-sk-bUr">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -17,7 +17,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" alpha="0.84999999999999987" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Benutzername" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hWa-3o-BRn">
+                            <imageView userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="belisBack.png" translatesAutoresizingMaskIntoConstraints="NO" id="PbO-3Z-iyw">
+                                <rect key="frame" x="-8" y="-10" width="621" height="623"/>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.84999999999999987" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Benutzername" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hWa-3o-BRn">
                                 <rect key="frame" x="213" y="247" width="174" height="30"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -39,7 +42,7 @@
                                     </mask>
                                 </variation>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.74999999999999978" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="BelIS App" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vrW-uQ-lEp">
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.74999999999999978" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="BelIS App" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vrW-uQ-lEp">
                                 <rect key="frame" x="136" y="154" width="329" height="69"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="114" id="5NT-NE-e4R"/>
@@ -61,7 +64,7 @@
                                     </mask>
                                 </variation>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" alpha="0.84999999999999987" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Passwort" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jLg-aa-Xjn">
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.84999999999999987" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Passwort" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jLg-aa-Xjn">
                                 <rect key="frame" x="213" y="285" width="174" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="194" id="JEQ-oI-nvb"/>
@@ -82,7 +85,7 @@
                                     </mask>
                                 </variation>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NMi-Z8-aLO">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NMi-Z8-aLO">
                                 <rect key="frame" x="213" y="323" width="174" height="31"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -106,7 +109,7 @@
                                     <action selector="loginButtonTabbed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Wz7-zj-kkd"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dMW-JZ-qWF">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dMW-JZ-qWF">
                                 <rect key="frame" x="0.0" y="567" width="61" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="22" id="eZN-T4-7k2"/>
@@ -128,71 +131,24 @@
                                     </mask>
                                 </variation>
                             </button>
-                            <imageView userInteractionEnabled="NO" alpha="0.64999999999999969" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wN6-16-chO">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.70655908629999997" blue="0.18732471419999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="jLg-aa-Xjn" firstAttribute="top" secondItem="hWa-3o-BRn" secondAttribute="bottom" constant="10" id="6WA-3R-aLf"/>
-                            <constraint firstItem="wN6-16-chO" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottomMargin" id="Fm0-f0-ahl"/>
-                            <constraint firstItem="wN6-16-chO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="KHp-rF-U6h"/>
                             <constraint firstItem="hWa-3o-BRn" firstAttribute="centerX" secondItem="jLg-aa-Xjn" secondAttribute="centerX" id="PmC-zX-jDz"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="wN6-16-chO" secondAttribute="trailing" constant="-20" id="bHf-TJ-9Xd"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="PbO-3Z-iyw" secondAttribute="bottom" constant="-20" id="S0V-BS-HXr"/>
                             <constraint firstItem="hWa-3o-BRn" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="200" id="cga-2Q-zcl"/>
+                            <constraint firstItem="PbO-3Z-iyw" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="dTt-za-iSJ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="PbO-3Z-iyw" secondAttribute="trailing" constant="-20" id="eUl-Mw-3wQ"/>
+                            <constraint firstItem="PbO-3Z-iyw" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="-20" id="fNZ-y5-KSb"/>
                             <constraint firstItem="dMW-JZ-qWF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="gxg-jQ-BHC"/>
                             <constraint firstItem="NMi-Z8-aLO" firstAttribute="top" secondItem="jLg-aa-Xjn" secondAttribute="bottom" constant="8" id="iaG-Ao-UkW"/>
                             <constraint firstAttribute="bottomMargin" secondItem="dMW-JZ-qWF" secondAttribute="bottom" constant="20" id="jtA-Pi-gFE"/>
                             <constraint firstAttribute="centerX" secondItem="hWa-3o-BRn" secondAttribute="centerX" id="oTW-dK-sxM"/>
                             <constraint firstAttribute="centerX" secondItem="NMi-Z8-aLO" secondAttribute="centerX" id="on7-ng-m5E"/>
                             <constraint firstItem="hWa-3o-BRn" firstAttribute="top" secondItem="vrW-uQ-lEp" secondAttribute="bottom" constant="8" id="rnb-kA-vu3"/>
-                            <constraint firstItem="wN6-16-chO" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="uRL-vb-kKo"/>
                             <constraint firstAttribute="centerX" secondItem="vrW-uQ-lEp" secondAttribute="centerX" constant="-0.5" id="wrE-oC-Vip"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="Fm0-f0-ahl"/>
-                                <exclude reference="KHp-rF-U6h"/>
-                                <exclude reference="bHf-TJ-9Xd"/>
-                                <exclude reference="uRL-vb-kKo"/>
-                                <exclude reference="wrE-oC-Vip"/>
-                                <exclude reference="PmC-zX-jDz"/>
-                                <exclude reference="cga-2Q-zcl"/>
-                                <exclude reference="oTW-dK-sxM"/>
-                                <exclude reference="rnb-kA-vu3"/>
-                                <exclude reference="6WA-3R-aLf"/>
-                                <exclude reference="iaG-Ao-UkW"/>
-                                <exclude reference="on7-ng-m5E"/>
-                                <exclude reference="gxg-jQ-BHC"/>
-                                <exclude reference="jtA-Pi-gFE"/>
-                            </mask>
-                        </variation>
-                        <variation key="heightClass=regular-widthClass=regular">
-                            <mask key="subviews">
-                                <exclude reference="hWa-3o-BRn"/>
-                                <exclude reference="vrW-uQ-lEp"/>
-                                <exclude reference="jLg-aa-Xjn"/>
-                                <exclude reference="NMi-Z8-aLO"/>
-                                <exclude reference="dMW-JZ-qWF"/>
-                                <exclude reference="wN6-16-chO"/>
-                            </mask>
-                            <mask key="constraints">
-                                <include reference="Fm0-f0-ahl"/>
-                                <include reference="KHp-rF-U6h"/>
-                                <include reference="bHf-TJ-9Xd"/>
-                                <include reference="uRL-vb-kKo"/>
-                                <include reference="wrE-oC-Vip"/>
-                                <include reference="PmC-zX-jDz"/>
-                                <include reference="cga-2Q-zcl"/>
-                                <include reference="oTW-dK-sxM"/>
-                                <include reference="rnb-kA-vu3"/>
-                                <include reference="6WA-3R-aLf"/>
-                                <include reference="iaG-Ao-UkW"/>
-                                <include reference="on7-ng-m5E"/>
-                                <include reference="gxg-jQ-BHC"/>
-                                <include reference="jtA-Pi-gFE"/>
-                            </mask>
-                        </variation>
                     </view>
                     <connections>
                         <outlet property="view" destination="8bC-Xf-vdC" id="fV0-ZS-i4e"/>
@@ -540,4 +496,7 @@
             <point key="canvasLocation" x="833" y="-136.5"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="belisBack.png" width="2080" height="2080"/>
+    </resources>
 </document>
