--- a/belis-app/Main.storyboard
+++ b/belis-app/Main.storyboard
@@ -17,11 +17,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="belisBack.png" translatesAutoresizingMaskIntoConstraints="NO" id="PbO-3Z-iyw">
-                                <rect key="frame" x="-8" y="-10" width="621" height="623"/>
+                            <imageView userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="belisBack.png" translatesAutoresizingMaskIntoConstraints="NO" id="PbO-3Z-iyw">
+                                <rect key="frame" x="-4" y="-20" width="608" height="640"/>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" alpha="0.84999999999999987" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Benutzername" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hWa-3o-BRn">
-                                <rect key="frame" x="213" y="247" width="174" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.84999999999999987" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Benutzername" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hWa-3o-BRn">
+                                <rect key="frame" x="243" y="220" width="114.5" height="30"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="E4y-pN-mzh"/>
@@ -42,8 +42,8 @@
                                     </mask>
                                 </variation>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.74999999999999978" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="BelIS App" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vrW-uQ-lEp">
-                                <rect key="frame" x="136" y="154" width="329" height="69"/>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.74999999999999978" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BelIS App" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vrW-uQ-lEp">
+                                <rect key="frame" x="141.5" y="124.5" width="318" height="87.5"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="114" id="5NT-NE-e4R"/>
                                     <constraint firstAttribute="width" constant="325" id="xS2-xl-l34"/>
@@ -64,8 +64,8 @@
                                     </mask>
                                 </variation>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" alpha="0.84999999999999987" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Passwort" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jLg-aa-Xjn">
-                                <rect key="frame" x="213" y="285" width="174" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.84999999999999987" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Passwort" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jLg-aa-Xjn">
+                                <rect key="frame" x="259" y="260" width="81" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="194" id="JEQ-oI-nvb"/>
                                     <constraint firstAttribute="height" constant="30" id="wdf-h1-6KO"/>
@@ -85,8 +85,8 @@
                                     </mask>
                                 </variation>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NMi-Z8-aLO">
-                                <rect key="frame" x="213" y="323" width="174" height="31"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NMi-Z8-aLO">
+                                <rect key="frame" x="281" y="298" width="38" height="30"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="XH4-Ot-ESJ"/>
@@ -109,8 +109,8 @@
                                     <action selector="loginButtonTabbed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Wz7-zj-kkd"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dMW-JZ-qWF">
-                                <rect key="frame" x="0.0" y="567" width="61" height="25"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dMW-JZ-qWF">
+                                <rect key="frame" x="16" y="550" width="36" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="22" id="eZN-T4-7k2"/>
                                     <constraint firstAttribute="width" constant="22" id="wA2-Wk-0ux"/>
